serverless/ecs/madisonreed/ephemeral-nested-infra/ecs/madisonreed-ecs-tester-ServiceConnect.yml

AWSTemplateFormatVersion: "2010-09-09"
Transform: AWS::Serverless-2016-10-31
Description: >
  Deploys ECS Fargate services, linked together through ECS Service Connect

Parameters:
  pAppName:
    Type: String
    Default: pr1
    Description: Application Name
  pVpcId:
    Type: AWS::EC2::VPC::Id
    Description: ID of the Virtual Private Network (VPC)
  pPrivateSubnetId1:
    Type: String
  pPrivateSubnetId2:
    Type: String
  pPublicSubnetId1:
    Type: String
  pPublicSubnetId2:
    Type: String
  pACMCertificateArn:
    Type: String
    Description: ACM cert ARN for ECS services ALB
  pR53HostedZoneId:
    Type: String
    Description: Route 53 hosted zone
  pColorAdvisorApiUrl:
    Type: String
  # Container Ports
  pWebsitePort:
    Type: Number
    Default: 80
  pMongoPort:
    Type: Number
    Default: 27017
  pRedisPort:
    Type: Number
    Default: 6379
  pMySQLPort:
    Type: Number
    Default: 3306
  pPostgresPort:
    Type: Number
    Default: 5432

  # ECR repos
  pWebsiteEcrImageUri:
    Type: String
    Description: > 
      URI of the ECR image used for Website Task Definition. 
      e.g. <account-id>.dkr.ecr.us-east-1.amazonaws.com/repository:tag


Resources:

  



  # ==============================================
  # ================= LOG GROUPS =================
  # ==============================================

  websiteLogGroup:
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /ecs/website/${pAppName}
      RetentionInDays: 7

  redisLogGroup:
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /ecs/redis/${pAppName}
      RetentionInDays: 7

  postgresLogGroup:
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /ecs/postgres/${pAppName}
      RetentionInDays: 7

  mysqlLogGroup:
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /ecs/mysql/${pAppName}
      RetentionInDays: 7

  mongoLogGroup:
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /ecs/mongo/${pAppName}
      RetentionInDays: 7

  # ===================================================
  # ================= SECURITY GROUPS =================
  # ===================================================
  
  # BACKEND SERVICES
  serviceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all traffic from self and ALB Security Group
      VpcId: !Ref pVpcId

  # Allow everything that has this security group attached
  serviceSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt serviceSecurityGroup.GroupId
      IpProtocol: -1
      FromPort: -1
      ToPort: -1
      SourceSecurityGroupId: !GetAtt serviceSecurityGroup.GroupId

  serviceVpcIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt serviceSecurityGroup.GroupId
      IpProtocol: -1  # Allows all protocols
      FromPort: -1    # Allows all ports
      ToPort: -1      # Allows all ports
      CidrIp: 10.20.0.0/16  # Allow traffic from VPC


  # ALLOW EVERYTHING FROM ALB SG
  serviceFrontendIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt serviceSecurityGroup.GroupId
      IpProtocol: -1
      FromPort: -1
      ToPort: -1
      SourceSecurityGroupId: !Ref albSecurityGroup

  # FRONTEND SG
  albSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for ALB allowing HTTP
      VpcId: !Ref pVpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0



  # ECS task role
  taskRole:
    Type: AWS::IAM::Role
    Properties:
      Path: "/"
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: CloudWatchLogs
          PolicyDocument: 
            Version: 2012-10-17
            Statement:
              - Sid: AllowCreateLogGroup
                Effect: Allow
                Action:
                  - logs:CreateLogGroup
                Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:*"
              - Sid: AllowLogStreams
                Effect: Allow
                Action:
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/ecs/*:*"
        - PolicyName: S3Access
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - s3:GetObject*
                  - s3:GetBucket*
                  - s3:List*
                  - s3:DeleteObject*
                  - s3:PutObject
                  - s3:PutObjectLegalHold
                  - s3:PutObjectRetention
                  - s3:PutObjectTagging
                  - s3:PutObjectVersionTagging
                  - s3:Abort*
                Resource: "*"
        
  taskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      Path: /
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      # Allows pulling ECR image and pushing logs to CW
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy


  # ====================================================
  # ================= TASK DEFINITIONS =================
  # ====================================================

  # WEBSITE
  websiteTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ExecutionRoleArn: !GetAtt taskExecutionRole.Arn
      TaskRoleArn: !GetAtt taskRole.Arn
      Cpu: 4096
      Memory: 8192
      RequiresCompatibilities:
        - FARGATE
      NetworkMode: awsvpc
      RuntimePlatform:
        CpuArchitecture: X86_64
        OperatingSystemFamily: LINUX
      # EphemeralStorage:
      #   SizeInGiB: 20
        
      ContainerDefinitions:
        - Name: website
          # changes to the Image will cause a new deployment to the ECS service, replacing the old deployment.
          Image: !Ref pWebsiteEcrImageUri
          PortMappings:
            - Name: website
              ContainerPort: !Ref pWebsitePort
              Protocol: tcp # tcp | udp
              AppProtocol: http
          Environment:
            - Name: REDIS_HOST
              Value: !Sub redis.${pAppName}.cloudmap.internal # Reference R53Hosted Zone created by Cloud Map Namespace
            - Name: REDIS_PORT
              Value: !Ref pRedisPort
            - Name: COLOR_ADVISOR_URL
              Value: !Ref pColorAdvisorApiUrl

            # MYSQL
            - Name: MYSQL_HOST
              Value: !Sub mysql.${pAppName}.cloudmap.internal
            - Name: MYSQL_PORT
              Value: !Ref pMySQLPort
            - Name: MYSQL_USER
              Value: root
            - Name: MYSQL_PASSWORD
              Value: root
            - Name: MYSQL_DB
              Value: mysql

            # POSTGRES
            - Name: POSTGRES_HOST
              Value: !Sub postgres.${pAppName}.cloudmap.internal
            - Name: POSTGRES_PORT
              Value: !Ref pPostgresPort
            - Name: POSTGRES_USER
              Value: postgres
            - Name: POSTGRES_PASSWORD
              Value: postgres
            - Name: POSTGRES_DB
              Value: postgres

            # MONGO
            - Name: MONGO_HOST
              Value: !Sub postgres.${pAppName}.cloudmap.internal
            - Name: MONGO_PORT
              Value: !Ref pMongoPort


          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref websiteLogGroup
              awslogs-region: !Sub ${AWS::Region}
              awslogs-stream-prefix: ecs

  # REDIS
  redisTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ExecutionRoleArn: !GetAtt taskExecutionRole.Arn
      TaskRoleArn: !GetAtt taskRole.Arn
      Cpu: 4096
      Memory: 8192
      RequiresCompatibilities:
        - FARGATE
      NetworkMode: awsvpc
      RuntimePlatform:
        CpuArchitecture: X86_64
        OperatingSystemFamily: LINUX
      # EphemeralStorage:
      #   SizeInGiB: 20
        
      ContainerDefinitions:
        - Name: redis
          # changes to the Image will cause a new deployment to the ECS service, replacing the old deployment.
          Image: redis:latest
          PortMappings:
            - Name: redis
              ContainerPort: !Ref pRedisPort
              Protocol: tcp # tcp | udp
              # appProtocol: DONT SET THIS FOR TCP. REDIS DOES NOT WORK THROUGH HTTP
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref redisLogGroup
              awslogs-region: !Sub ${AWS::Region}
              awslogs-stream-prefix: ecs

  # MYSQL
  mysqlTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ExecutionRoleArn: !GetAtt taskExecutionRole.Arn
      TaskRoleArn: !GetAtt taskRole.Arn
      Cpu: 4096
      Memory: 8192
      RequiresCompatibilities:
        - FARGATE
      NetworkMode: awsvpc
      RuntimePlatform:
        CpuArchitecture: X86_64
        OperatingSystemFamily: LINUX
      # EphemeralStorage:
      #   SizeInGiB: 20
        
      ContainerDefinitions:
        - Name: mysql
          # changes to the Image will cause a new deployment to the ECS service, replacing the old deployment.
          Image: mysql:latest
          PortMappings:
            - Name: mysql
              ContainerPort: !Ref pMySQLPort
              Protocol: tcp # tcp | udp
          Environment:
            - Name: MYSQL_DATABASE
              Value: mysql
            - Name: MYSQL_ROOT_PASSWORD
              Value: root
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref mysqlLogGroup
              awslogs-region: !Sub ${AWS::Region}
              awslogs-stream-prefix: ecs

  # POSTGRES
  postgresTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ExecutionRoleArn: !GetAtt taskExecutionRole.Arn
      TaskRoleArn: !GetAtt taskRole.Arn
      Cpu: 4096
      Memory: 8192
      RequiresCompatibilities:
        - FARGATE
      NetworkMode: awsvpc
      RuntimePlatform:
        CpuArchitecture: X86_64
        OperatingSystemFamily: LINUX
      # EphemeralStorage:
      #   SizeInGiB: 20
        
      ContainerDefinitions:
        - Name: postgres
          # changes to the Image will cause a new deployment to the ECS service, replacing the old deployment.
          Image: postgres:latest
          PortMappings:
            - Name: postgres
              ContainerPort: !Ref pPostgresPort
              Protocol: tcp # tcp | udp
          Environment:
            - Name: POSTGRES_USER
              Value: postgres
            - Name: POSTGRES_PASSWORD
              Value: postgres
            - Name: POSTGRES_DB
              Value: postgres
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref postgresLogGroup
              awslogs-region: !Sub ${AWS::Region}
              awslogs-stream-prefix: ecs


  # MONGO
  mongoTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ExecutionRoleArn: !GetAtt taskExecutionRole.Arn
      TaskRoleArn: !GetAtt taskRole.Arn
      Cpu: 4096
      Memory: 8192
      RequiresCompatibilities:
        - FARGATE
      NetworkMode: awsvpc
      RuntimePlatform:
        CpuArchitecture: X86_64
        OperatingSystemFamily: LINUX
      # EphemeralStorage:
      #   SizeInGiB: 20
        
      ContainerDefinitions:
        - Name: mongo
          # changes to the Image will cause a new deployment to the ECS service, replacing the old deployment.
          Image: mongo:latest
          PortMappings:
            - Name: mongo
              ContainerPort: !Ref pMongoPort
              Protocol: tcp # tcp | udp
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref mongoLogGroup
              awslogs-region: !Sub ${AWS::Region}
              awslogs-stream-prefix: ecs



  # ===================================================
  # ================= FARGATE CLUSTER =================
  # ===================================================

  # Service Discovery/Connect Namespace (AWS Cloud Map)
  # Creates Private Route53 hosted zone matching the 'Name' property
  serviceDiscoveryNameSpace:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Vpc: !Ref pVpcId
      Name: !Sub ${pAppName}.cloudmap.internal

  # Service Discovery Setup
  # # UI (Website)
  # websiteServiceDiscoveryService:
  #   Type: AWS::ServiceDiscovery::Service
  #   Properties:
  #     Name: website
  #     Description: Service discovery for website service
  #     DnsConfig:
  #       DnsRecords:
  #         - Type: A
  #           TTL: 30
  #     NamespaceId: !GetAtt serviceDiscoveryNameSpace.Id

  # # Redis
  # redisServiceDiscoveryService:
  #   Type: AWS::ServiceDiscovery::Service
  #   Properties:
  #     Name: redis
  #     Description: Service discovery for redis service
  #     DnsConfig:
  #       DnsRecords:
  #         - Type: A
  #           TTL: 30
  #     NamespaceId: !GetAtt serviceDiscoveryNameSpace.Id

  # Website
  # Used to be able to connect via VPN and DNS route to the Web UI (DNS record could be stale)
  websiteServiceDiscoveryService:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      Name: madisonreed # Name must be unique from what is given for ECS service 'ServiceConnectConfiguration.PortName'. 
      Description: Service discovery for website service
      DnsConfig:
        DnsRecords:
          - Type: A
            TTL: 60
          - Type: SRV
            TTL: 60
        RoutingPolicy: MULTIVALUE
      NamespaceId: !GetAtt serviceDiscoveryNameSpace.Id

  fargateCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub ${pAppName}-cluster
      ClusterSettings:
        - Name: containerInsights
          Value: enabled
      CapacityProviders:
        - FARGATE
        - FARGATE_SPOT
      DefaultCapacityProviderStrategy:
        - CapacityProvider: FARGATE_SPOT
          Base: 0 # how many tasks (minimum) can be ran on this strategy
          Weight: 50
        - CapacityProvider: FARGATE
          Base: 20
          Weight: 50
      ServiceConnectDefaults: # AWS Service Connect
        Namespace: !GetAtt serviceDiscoveryNameSpace.Arn



  # =========================================================
  # ================= ALB & LISTENERS/RULES =================
  # =========================================================
  
  # # Listener to redirect HTTP traffic to HTTPS
  # redirectListener:
  #   Type: AWS::ElasticLoadBalancingV2::Listener
  #   Properties: 
  #     DefaultActions: 
  #       - Type: "redirect"
  #         RedirectConfig: 
  #           Port: 443
  #           Protocol: "HTTPS"
  #           StatusCode: "HTTP_301"
  #     LoadBalancerArn: !Ref ecsLoadBalancer
  #     Port: 80
  #     Protocol: "HTTP"

  # httpsListener:
  #   Type: AWS::ElasticLoadBalancingV2::Listener
  #   Properties: 
  #     Certificates: 
  #       - CertificateArn: !Ref pACMCertificateArn
  #     DefaultActions: 
  #       - Type: "fixed-response"
  #         FixedResponseConfig:
  #           StatusCode: "503"
  #           ContentType: "text/plain"
  #           MessageBody: "You have reached an invalid domain."
  #     LoadBalancerArn: !Ref ecsLoadBalancer
  #     Port: 443
  #     Protocol: HTTPS
  #     SslPolicy: "ELBSecurityPolicy-2016-08"

  # # WEBSITE
  # websiteRule:
  #   Type: AWS::ElasticLoadBalancingV2::ListenerRule
  #   Properties:
  #     Actions:
  #       - Type: forward
  #         TargetGroupArn: !Ref websiteTg
  #     Conditions:
  #       - Field: host-header
  #         HostHeaderConfig:
  #           Values: 
  #             - !Sub ${pAppName}.dev.mdsnrdfd.com
  #     ListenerArn: !Ref httpsListener
  #     Priority: 18


  # =================================================
  # ================= TARGET GROUPS =================
  # =================================================


  # # WEBSITE
  # websiteTg:
  #   Type: AWS::ElasticLoadBalancingV2::TargetGroup
  #   Properties: 
  #     Name: !Sub website-${pAppName}

  #     HealthCheckPath: /
  #     HealthCheckProtocol: HTTP
  #     HealthCheckTimeoutSeconds: 120
  #     HealthCheckIntervalSeconds: 150
  #     HealthyThresholdCount: 2
  #     UnhealthyThresholdCount: 2
  #     Port: !Ref pWebsitePort
  #     Protocol: HTTP
  #     ProtocolVersion: HTTP1
  #     Matcher:
  #       HttpCode: 200-499
  #     TargetType: ip
  #     VpcId: !Ref pVpcId

  
  # ecsLoadBalancer:
  #   Type: AWS::ElasticLoadBalancingV2::LoadBalancer
  #   Properties:
  #     IpAddressType: ipv4
  #     Scheme: internet-facing
  #     SecurityGroups:
  #       - !GetAtt albSecurityGroup.GroupId
  #     Subnets:
  #       - !Ref pPublicSubnetId1
  #       - !Ref pPublicSubnetId2
  #     Type: application



  # ================================================
  # ================= ECS SERVICES =================
  # ================================================

  ecsWebsiteService:
    # Dependency is required due to the fact that we must deploy backwards 
    # from a traditional deployment (database > API > Web UI)
    DependsOn:
      # - websiteRule
      - redisService
      - mysqlService
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref fargateCluster
      ServiceName: website
      DeploymentController: 
        Type: ECS
      DesiredCount: 1
      EnableECSManagedTags: true
      EnableExecuteCommand: true
      LaunchType: FARGATE
      # Allows the ability for updates to create a new task before draining the old task.
      # https://docs.aws.amazon.com/AmazonECS/latest/APIReference/API_DeploymentConfiguration.html
      DeploymentConfiguration:
        MinimumHealthyPercent: 100
        MaximumPercent: 200
      # Adjust if container takes a while to start up
      # HealthCheckGracePeriodSeconds: 30
      # LoadBalancers: 
      #   - ContainerName: website
      #     ContainerPort: !Ref pWebsitePort
      #     TargetGroupArn: !Ref websiteTg
      NetworkConfiguration: 
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !GetAtt serviceSecurityGroup.GroupId
          Subnets: 
            - !Ref pPrivateSubnetId1
            - !Ref pPrivateSubnetId2
      PlatformVersion: LATEST
      PropagateTags: SERVICE
      # Expose containers running on this Service to Cloud Map Service Connect.
      # Allows using Cloud Map to connect ECS Services between/within clusters without ELBs
      ServiceConnectConfiguration:
        Enabled: true
        Services:
          - PortName: website
            ClientAliases:
              - Port: !Ref pWebsitePort
        # Service Connect Agent logs location
        LogConfiguration:
          LogDriver: awslogs
          Options:
            awslogs-group: !Ref websiteLogGroup
            awslogs-region: !Sub ${AWS::Region}
            awslogs-stream-prefix: service-connect-agent
      # Used to connect via Route53 record for Private DNS (VPN only)
      ServiceRegistries: 
        - RegistryArn: !GetAtt websiteServiceDiscoveryService.Arn
          Port: !Ref pWebsitePort
      TaskDefinition: !Ref websiteTaskDefinition
      Tags: 
        - Key: managed-by
          Value: SAM

  redisService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref fargateCluster
      ServiceName: redis
      DeploymentController: 
        Type: ECS
      DesiredCount: 1
      EnableECSManagedTags: true
      EnableExecuteCommand: true
      LaunchType: FARGATE
      # Allows the ability for updates to create a new task before draining the old task.
      # https://docs.aws.amazon.com/AmazonECS/latest/APIReference/API_DeploymentConfiguration.html
      DeploymentConfiguration:
        MinimumHealthyPercent: 100
        MaximumPercent: 200
      NetworkConfiguration: 
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !GetAtt serviceSecurityGroup.GroupId
          Subnets: 
            - !Ref pPrivateSubnetId1
            - !Ref pPrivateSubnetId2
      PlatformVersion: LATEST
      PropagateTags: SERVICE
      # Expose containers running on this Service to Cloud Map Service Connect.
      # Allows using Cloud Map to connect ECS Services between/within clusters without ELBs
      ServiceConnectConfiguration:
        Enabled: true
        Services:
          - PortName: redis # Points to the "PortMappings.Name" defined at the Task Definition
            ClientAliases:
              - Port: !Ref pRedisPort
        # Service Connect Agent logs location
        LogConfiguration:
          LogDriver: awslogs
          Options:
            awslogs-group: !Ref redisLogGroup
            awslogs-region: !Sub ${AWS::Region}
            awslogs-stream-prefix: service-connect-agent
      # ServiceRegistries: 
      #   - ServiceRegistry
      TaskDefinition: !Ref redisTaskDefinition
      Tags: 
        - Key: managed-by
          Value: SAM
  
  mysqlService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref fargateCluster
      ServiceName: mysql
      DeploymentController: 
        Type: ECS
      DesiredCount: 1
      EnableECSManagedTags: true
      EnableExecuteCommand: true
      LaunchType: FARGATE
      # Allows the ability for updates to create a new task before draining the old task.
      # https://docs.aws.amazon.com/AmazonECS/latest/APIReference/API_DeploymentConfiguration.html
      DeploymentConfiguration:
        MinimumHealthyPercent: 100
        MaximumPercent: 200
      NetworkConfiguration: 
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !GetAtt serviceSecurityGroup.GroupId
          Subnets: 
            - !Ref pPrivateSubnetId1
            - !Ref pPrivateSubnetId2
      PlatformVersion: LATEST
      PropagateTags: SERVICE
      # Expose containers running on this Service to Cloud Map Service Connect.
      # Allows using Cloud Map to connect ECS Services between/within clusters without ELBs
      ServiceConnectConfiguration:
        Enabled: true
        Services:
          - PortName: mysql # Points to the "PortMappings.Name" defined at the Task Definition
            ClientAliases:
              - Port: !Ref pMySQLPort
        # Service Connect Agent logs location
        LogConfiguration:
          LogDriver: awslogs
          Options:
            awslogs-group: !Ref mysqlLogGroup
            awslogs-region: !Sub ${AWS::Region}
            awslogs-stream-prefix: service-connect-agent
      # ServiceRegistries: 
      #   - ServiceRegistry
      TaskDefinition: !Ref mysqlTaskDefinition
      Tags: 
        - Key: managed-by
          Value: SAM


  # postgresService:
  #   Type: AWS::ECS::Service
  #   Properties:
  #     Cluster: !Ref fargateCluster
  #     ServiceName: postgres
  #     DeploymentController: 
  #       Type: ECS
  #     DesiredCount: 1
  #     EnableECSManagedTags: true
  #     EnableExecuteCommand: true
  #     LaunchType: FARGATE
  #     # Allows the ability for updates to create a new task before draining the old task.
  #     # https://docs.aws.amazon.com/AmazonECS/latest/APIReference/API_DeploymentConfiguration.html
  #     DeploymentConfiguration:
  #       MinimumHealthyPercent: 100
  #       MaximumPercent: 200
  #     NetworkConfiguration: 
  #       AwsvpcConfiguration:
  #         AssignPublicIp: DISABLED
  #         SecurityGroups:
  #           - !GetAtt serviceSecurityGroup.GroupId
  #         Subnets: 
  #           - !Ref pPrivateSubnetId1
  #           - !Ref pPrivateSubnetId2
  #     PlatformVersion: LATEST
  #     PropagateTags: SERVICE
  #     # Expose containers running on this Service to Cloud Map Service Connect.
  #     # Allows using Cloud Map to connect services between/within clusters without ELBs
  #     ServiceConnectConfiguration:
  #       Enabled: true
  #       Services:
  #         - PortName: postgres # Points to the "PortMappings.Name" defined at the Task Definition
  #           ClientAliases:
  #             - Port: !Ref pPostgresPort
  #       # Service Connect Agent logs location
  #       LogConfiguration:
  #         LogDriver: awslogs
  #         Options:
  #           awslogs-group: !Ref postgresLogGroup
  #           awslogs-region: !Sub ${AWS::Region}
  #           awslogs-stream-prefix: service-connect-agent
  #     # ServiceRegistries: 
  #     #   - ServiceRegistry
  #     TaskDefinition: !Ref postgresTaskDefinition
  #     Tags: 
  #       - Key: managed-by
  #         Value: SAM

  # mongoService:
  #   Type: AWS::ECS::Service
  #   Properties:
  #     Cluster: !Ref fargateCluster
  #     ServiceName: mongo
  #     DeploymentController: 
  #       Type: ECS
  #     DesiredCount: 1
  #     EnableECSManagedTags: true
  #     EnableExecuteCommand: true
  #     LaunchType: FARGATE
  #     # Allows the ability for updates to create a new task before draining the old task.
  #     # https://docs.aws.amazon.com/AmazonECS/latest/APIReference/API_DeploymentConfiguration.html
  #     DeploymentConfiguration:
  #       MinimumHealthyPercent: 100
  #       MaximumPercent: 200
  #     NetworkConfiguration: 
  #       AwsvpcConfiguration:
  #         AssignPublicIp: DISABLED
  #         SecurityGroups:
  #           - !GetAtt serviceSecurityGroup.GroupId
  #         Subnets: 
  #           - !Ref pPrivateSubnetId1
  #           - !Ref pPrivateSubnetId2
  #     PlatformVersion: LATEST
  #     PropagateTags: SERVICE
  #     # Expose containers running on this Service to Cloud Map Service Connect.
  #     # Allows using Cloud Map to connect services between/within clusters without ELBs
  #     ServiceConnectConfiguration:
  #       Enabled: true
  #       Services:
  #         - PortName: mongo # Points to the "PortMappings.Name" defined at the Task Definition
  #           ClientAliases:
  #             - Port: !Ref pMongoPort
  #       # Service Connect Agent logs location
  #       LogConfiguration:
  #         LogDriver: awslogs
  #         Options:
  #           awslogs-group: !Ref mongoLogGroup
  #           awslogs-region: !Sub ${AWS::Region}
  #           awslogs-stream-prefix: service-connect-agent
  #     # ServiceRegistries: 
  #     #   - ServiceRegistry
  #     TaskDefinition: !Ref mongoTaskDefinition
  #     Tags: 
  #       - Key: managed-by
  #         Value: SAM

  # ROUTE53 Records
  # route53Records:
  #   Type: AWS::Route53::RecordSetGroup
  #   Properties:
  #     HostedZoneId: !Ref pR53HostedZoneId # Id of the Hosted Zone created during domain registration
  #     RecordSets:
  #       # Website
  #       - Name: !Sub ${pAppName}.dev.mdsnrdfd.com
  #         Type: A
  #         AliasTarget:
  #           HostedZoneId: !GetAtt ecsLoadBalancer.CanonicalHostedZoneID # Loadbalancer Id
  #           DNSName: !GetAtt ecsLoadBalancer.DNSName





Outputs:
  # albEndpointUrl:
  #   Description: DNS Endpoint for the ECS ALB
  #   Value: !GetAtt ecsLoadBalancer.DNSName

  websiteUrl:
    Description: Application URL endpoint
    Value: !Sub http://madisonreed.${pAppName}.cloudmap.internal  # !Sub https://${pAppName}.dev.mdsnrdfd.com
